--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">portfolio sherpa</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -55,13 +55,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#portfolio">Services</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#about">Transition</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#contact">Goals</a>
                     </li>
                 </ul>
             </div>
@@ -77,9 +77,9 @@
                 <div class="col-lg-12">
                     <i class="fa fa-coffee header-icon"></i> 
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
+                        <span class="name">Portfolio Sherpa</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Guide - Advisor - Thought Partner</span>
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Services</h2>
                     <hr class="star-primary">
                 </div>
             </div>
