--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">portfolio sherpa</a>
+                <a class="navbar-brand" href="#page-top">portfolio services coordinator</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -77,7 +77,7 @@
                 <div class="col-lg-12">
                     <i class="fa fa-coffee header-icon"></i> 
                     <div class="intro-text">
-                        <span class="name">Portfolio Sherpa</span>
+                        <span class="name">Portfolio Services Coordinator</span>
                         <hr class="star-light">
                         <span class="skills">Guide - Advisor - Thought Partner</span>
                     </div>
